force-app/main/default/objects/Welcome_Call_Details__c/Welcome_Call_Details__c.object-meta.xml
<CustomObject>
    <label>Welcome Call Detail</label>
    <nameField>
        <displayFormat>WCD-{0000}</displayFormat>
        <label>Welcome Call Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Call Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>