force-app/main/default/objects/Welcome_Call_Details__c/fields/Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Value</label>
    <type>Checkbox</type>
</CustomField>