force-app/main/default/objects/Welcome_Call_Details__c/fields/Bank_RM__c.field-meta.xml
<CustomField>
    <fullName>Bank_RM__c</fullName>
    <label>Bank RM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>