force-app/main/default/objects/Welcome_Call_Details__c/fields/Bank_RM_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_RM_Contact_Number__c</fullName>
    <label>Bank RM Contact Number</label>
    <type>Phone</type>
</CustomField>