force-app/main/default/objects/Welcome_Call_Details__c/fields/Bank_RM_details_for_followup__c.field-meta.xml
<CustomField>
    <fullName>Bank_RM_details_for_followup__c</fullName>
    <label>Bank RM details for followup</label>
    <type>TextArea</type>
</CustomField>