force-app/main/default/objects/Welcome_Call_Details__c/fields/Call_Disposition_L5__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L5__c</fullName>
    <label>Call Disposition L5</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Disposition_L4__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale of Property</fullName>
            </value>
            <value>
                <fullName>Flexible Payment Option</fullName>
            </value>
            <value>
                <fullName>Flexibility for SDR Payment</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>