force-app/main/default/objects/Welcome_Call_Details__c/fields/Car_Parks__c.field-meta.xml
<CustomField>
    <fullName>Car_Parks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Parks</label>
    <type>Checkbox</type>
</CustomField>