force-app/main/default/objects/Welcome_Call_Details__c/fields/Clients_expectation_for_registration__c.field-meta.xml
<CustomField>
    <fullName>Clients_expectation_for_registration__c</fullName>
    <label>Clients expectation for registration</label>
    <type>TextArea</type>
</CustomField>