force-app/main/default/objects/Welcome_Call_Details__c/fields/Co_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-Applicant Name</label>
    <type>Checkbox</type>
</CustomField>