force-app/main/default/objects/Welcome_Call_Details__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOB</label>
    <type>Checkbox</type>
</CustomField>