force-app/main/default/objects/Welcome_Call_Details__c/fields/Flat_No__c.field-meta.xml
<CustomField>
    <fullName>Flat_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flat No</label>
    <type>Checkbox</type>
</CustomField>