force-app/main/default/objects/Welcome_Call_Details__c/fields/Landline__c.field-meta.xml
<CustomField>
    <fullName>Landline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landline</label>
    <type>Checkbox</type>
</CustomField>