force-app/main/default/objects/Welcome_Call_Details__c/fields/Need_help_in_home_loan__c.field-meta.xml
<CustomField>
    <fullName>Need_help_in_home_loan__c</fullName>
    <label>Need help in home loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>