force-app/main/default/objects/Welcome_Call_Details__c/fields/Next_Payment_due__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Payment due</label>
    <type>Checkbox</type>
</CustomField>