force-app/main/default/objects/Welcome_Call_Details__c/fields/Our_office_hours__c.field-meta.xml
<CustomField>
    <fullName>Our_office_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share working hours with the customer</label>
    <type>Checkbox</type>
</CustomField>