force-app/main/default/objects/Welcome_Call_Details__c/fields/Pending_booking_amount_with_date__c.field-meta.xml
<CustomField>
    <fullName>Pending_booking_amount_with_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token amount date(CHQ/DD/RTGS)</label>
    <type>Checkbox</type>
</CustomField>