force-app/main/default/objects/Welcome_Call_Details__c/fields/Tentative_date_for_Possession__c.field-meta.xml
<CustomField>
    <fullName>Tentative_date_for_Possession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tentative date for posession to be share</label>
    <type>Checkbox</type>
</CustomField>